--- a/package.json
+++ b/package.json
@@ -1,1 +1,21 @@
-hello
+{
+  "type":"module",
+  "name": "jctrans-knowledgebase",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:serve": "vitepress serve docs/.vitepress/dist"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "packageManager": "pnpm@10.6.3",
+  "devDependencies": {
+    "@vueuse/core": "^13.4.0",
+    "vitepress": "^1.6.3",
+    "vue": "^3.5.17"
+  }
+}
