--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "type":"module",
+  "type": "module",
   "name": "jctrans-knowledgebase",
   "version": "1.0.0",
   "description": "",
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@vueuse/core": "^13.4.0",
     "vitepress": "^1.6.3",
+    "vitepress-plugin-search": "1.0.4-alpha.22",
     "vue": "^3.5.17"
   }
 }
